@@ -38,42 +38,42 @@ com.google.inject.guice.version = 3.0
 /com.ibm.icu/icu4j = 53.1
 /com.spatial4j/spatial4j = 0.4.1
 
-com.sun.jersey.version = 1.8
+com.sun.jersey.version = 1.9
 /com.sun.jersey.contribs/jersey-guice = ${com.sun.jersey.version}
 /com.sun.jersey/jersey-bundle = ${com.sun.jersey.version}
 /com.sun.jersey/jersey-core = ${com.sun.jersey.version}
 /com.sun.jersey/jersey-json = ${com.sun.jersey.version}
 /com.sun.jersey/jersey-server = ${com.sun.jersey.version}
 
-/com.sun.xml.bind/jaxb-impl = 2.2.2
+/com.sun.xml.bind/jaxb-impl = 2.2.3-1
 /com.thoughtworks.paranamer/paranamer = 2.3
 /com.typesafe/config = 1.0.2
 /com.uwyn/jhighlight = 1.0
-/commons-beanutils/commons-beanutils = 1.7.0
+/commons-beanutils/commons-beanutils = 1.8.3
 /commons-cli/commons-cli = 1.2
 /commons-codec/commons-codec = 1.9
 /commons-collections/commons-collections = 3.2.1
 /commons-configuration/commons-configuration = 1.6
-/commons-digester/commons-digester = 2.0
+/commons-digester/commons-digester = 2.1
 /commons-fileupload/commons-fileupload = 1.2.1
-/commons-io/commons-io = 2.1
+/commons-io/commons-io = 2.3
 /commons-lang/commons-lang = 2.6
-/commons-logging/commons-logging = 1.1.1
+/commons-logging/commons-logging = 1.1.3
 /de.l3s.boilerpipe/boilerpipe = 1.1.0
 /dom4j/dom4j = 1.6.1
 /edu.ucar/netcdf = 4.2-min
 /hsqldb/hsqldb = 1.8.0.10
-/io.netty/netty = 3.6.2.Final
+/io.netty/netty = 3.7.0.Final
 /jakarta-regexp/jakarta-regexp = 1.4
-/javax.activation/activation = 1.1
+/javax.activation/activation = 1.1.1
 /javax.inject/javax.inject= 1
-/javax.mail/mail = 1.4.1
+/javax.mail/mail = 1.4.3
 /javax.servlet/javax.servlet-api = 3.0.1
 /javax.servlet/servlet-api = 2.4
 /jdom/jdom = 1.0
 /joda-time/joda-time = 2.2
 /junit/junit = 4.10
-/log4j/log4j = 1.2.16
+/log4j/log4j = 1.2.17
 /mecab/mecab-ipadic = 2.7.0-20070801
 /mecab/mecab-naist-jdic = 0.6.3b-20111013
 /net.arnx/jsonic = 1.2.7
@@ -82,7 +82,7 @@ com.sun.jersey.version = 1.8
 /net.sourceforge.nekohtml/nekohtml = 1.9.17
 /org.antlr/antlr-runtime = 3.5
 /org.apache.ant/ant = 1.8.2
-/org.apache.avro/avro = 1.7.4
+/org.apache.avro/avro = 1.7.5
 /org.apache.commons/commons-compress = 1.7
 /org.apache.derby/derby = 10.9.1.0
 
@@ -228,7 +228,7 @@ org.slf4j.version = 1.7.6
 /org.slf4j/slf4j-api = ${org.slf4j.version}
 /org.slf4j/slf4j-log4j12 = ${org.slf4j.version}
 
-/org.tukaani/xz = 1.2
-/org.xerial.snappy/snappy-java = 1.0.4.1
+/org.tukaani/xz = 1.4
+/org.xerial.snappy/snappy-java = 1.0.5
 /rome/rome = 0.9
 /xerces/xercesImpl = 2.9.1
